Fixed problem where comments weren't being rendered as HTML, Fixed problems with guest numbers not showing up

--- a/app/client/styles/modal.css
+++ b/app/client/styles/modal.css
@@ -145,7 +145,7 @@ blockquote {
 }
 
 .going {
-  left: 1.57em;
+  left: 1.52em;
 }
 
 .maybe {
